--- a/scripts/record_avi/dolphin-user/Config/Dolphin.ini
+++ b/scripts/record_avi/dolphin-user/Config/Dolphin.ini
@@ -3,19 +3,21 @@ ShowLag = False
 ShowFrameCount = True
 ISOPaths = 0
 RecursiveISOPaths = False
-NANDRootPath = 
+NANDRootPath = ./dolphin-user/Wii
 DumpPath = 
 WirelessMac = 
-LastFilename = ./scripts/record_avi/Super Smash Bros. Melee (v1.02).iso
+LastFilename = ./Super Smash Bros. Melee (v1.02).iso
 WiiSDCardPath = ./dolphin-user/Wii/sd.raw
+GCMPathes = 0
+RecursiveGCMPaths = False
 [Interface]
 ConfirmStop = False
 UsePanicHandlers = True
 OnScreenDisplayMessages = True
 HideCursor = False
 AutoHideCursor = False
-MainWindowPosX = 481
-MainWindowPosY = 37
+MainWindowPosX = 87
+MainWindowPosY = 29
 MainWindowWidth = 800
 MainWindowHeight = 600
 Language = 0
@@ -26,6 +28,7 @@ ShowLogConfigWindow = False
 ExtendedFPSInfo = False
 ThemeName40 = Clean
 PauseOnFocusLost = False
+ShowConsole = False
 [Display]
 FullscreenResolution = Auto
 Fullscreen = False
@@ -72,7 +75,7 @@ ColumnRegion = True
 ColumnSize = True
 ColumnState = True
 [Core]
-HLE_BS2 = False
+HLE_BS2 = True
 TimingVariance = 40
 CPUCore = 1
 Fastmem = True
@@ -129,6 +132,10 @@ GPUDeterminismMode = auto
 PerfMapDir = 
 EnableCustomRTC = False
 CustomRTCValue = 0x386d4380
+DSPThread = False
+DefaultGCM = 
+FrameLimit = 0x00000001
+UseFPS = False
 [Movie]
 PauseMovie = True
 Author = 
@@ -151,3 +158,120 @@ LoopReplay = True
 ID = b3319d0ea6e5456c280441e59a5fd0e9
 Enabled = False
 PermissionAsked = True
+[Hotkeys]
+Open = 79
+OpenModifier = 2
+ChangeDisc = 0
+ChangeDiscModifier = 0
+RefreshList = 0
+RefreshListModifier = 0
+PlayPause = 349
+PlayPauseModifier = 0
+Stop = 27
+StopModifier = 0
+Reset = 0
+ResetModifier = 0
+FrameAdvance = 0
+FrameAdvanceModifier = 0
+StartRecording = 0
+StartRecordingModifier = 0
+PlayRecording = 0
+PlayRecordingModifier = 0
+ExportRecording = 0
+ExportRecordingModifier = 0
+Readonlymode = 0
+ReadonlymodeModifier = 0
+ToggleFullscreen = 13
+ToggleFullscreenModifier = 1
+Screenshot = 348
+ScreenshotModifier = 0
+Exit = 0
+ExitModifier = 0
+Wiimote1Connect = 344
+Wiimote1ConnectModifier = 1
+Wiimote2Connect = 345
+Wiimote2ConnectModifier = 1
+Wiimote3Connect = 346
+Wiimote3ConnectModifier = 1
+Wiimote4Connect = 347
+Wiimote4ConnectModifier = 1
+BalanceBoardConnect = 348
+BalanceBoardConnectModifier = 1
+ToggleIR = 0
+ToggleIRModifier = 0
+ToggleAspectRatio = 0
+ToggleAspectRatioModifier = 0
+ToggleEFBCopies = 0
+ToggleEFBCopiesModifier = 0
+ToggleFog = 0
+ToggleFogModifier = 0
+IncreaseFrameLimit = 0
+IncreaseFrameLimitModifier = 0
+DecreaseFrameLimit = 0
+DecreaseFrameLimitModifier = 0
+LoadStateSlot1 = 340
+LoadStateSlot1Modifier = 0
+LoadStateSlot2 = 341
+LoadStateSlot2Modifier = 0
+LoadStateSlot3 = 342
+LoadStateSlot3Modifier = 0
+LoadStateSlot4 = 343
+LoadStateSlot4Modifier = 0
+LoadStateSlot5 = 344
+LoadStateSlot5Modifier = 0
+LoadStateSlot6 = 345
+LoadStateSlot6Modifier = 0
+LoadStateSlot7 = 346
+LoadStateSlot7Modifier = 0
+LoadStateSlot8 = 347
+LoadStateSlot8Modifier = 0
+LoadStateSlot9 = 0
+LoadStateSlot9Modifier = 0
+LoadStateSlot10 = 0
+LoadStateSlot10Modifier = 0
+SaveStateSlot1 = 340
+SaveStateSlot1Modifier = 4
+SaveStateSlot2 = 341
+SaveStateSlot2Modifier = 4
+SaveStateSlot3 = 342
+SaveStateSlot3Modifier = 4
+SaveStateSlot4 = 343
+SaveStateSlot4Modifier = 4
+SaveStateSlot5 = 344
+SaveStateSlot5Modifier = 4
+SaveStateSlot6 = 345
+SaveStateSlot6Modifier = 4
+SaveStateSlot7 = 346
+SaveStateSlot7Modifier = 4
+SaveStateSlot8 = 347
+SaveStateSlot8Modifier = 4
+SaveStateSlot9 = 0
+SaveStateSlot9Modifier = 0
+SaveStateSlot10 = 0
+SaveStateSlot10Modifier = 0
+LoadLastState1 = 0
+LoadLastState1Modifier = 0
+LoadLastState2 = 0
+LoadLastState2Modifier = 0
+LoadLastState3 = 0
+LoadLastState3Modifier = 0
+LoadLastState4 = 0
+LoadLastState4Modifier = 0
+LoadLastState5 = 0
+LoadLastState5Modifier = 0
+LoadLastState6 = 0
+LoadLastState6Modifier = 0
+LoadLastState7 = 0
+LoadLastState7Modifier = 0
+LoadLastState8 = 0
+LoadLastState8Modifier = 0
+SaveFirstState = 0
+SaveFirstStateModifier = 0
+UndoLoadState = 351
+UndoLoadStateModifier = 0
+UndoSaveState = 351
+UndoSaveStateModifier = 4
+SaveStateFile = 0
+SaveStateFileModifier = 0
+LoadStateFile = 0
+LoadStateFileModifier = 0
