pause movie at the end of recording
maybe this fixes the weird thing I noticed where the mask videos were
different lengths than the image videos?  like, I made them on my
laptop, so they were both still in sync.  just, the mask videos kept
going for a few seconds past the image videos.  the character was just
standing there doing nothing.

possibly dolphin will keep dumping frames even once the inputs end?  god
that’s stupid.

--- a/scripts/record_avi/dolphin-user/Config/Dolphin.ini
+++ b/scripts/record_avi/dolphin-user/Config/Dolphin.ini
@@ -135,7 +135,7 @@ DefaultGCM =
 FrameLimit = 0x00000001
 UseFPS = False
 [Movie]
-PauseMovie = False
+PauseMovie = True
 Author = 
 DumpFrames = True
 DumpFramesSilent = False
